[gd_scene load_steps=3 format=3 uid="uid://d3h7wj08p1vs1"]

[ext_resource type="Script" path="res://OptionsScene.gd" id="1_1abqx"]
[ext_resource type="FontFile" uid="uid://ddxvv4lqu6s2u" path="res://JetBrainsMonoNerdFontMonoRegular.ttf" id="2_x07cu"]

[node name="OptionsScene" type="Node2D"]
script = ExtResource("1_1abqx")
mainMenuScene = "res://MainMenuScene.tscn"

[node name="BackgroundImage" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 688.0
color = Color(0.192157, 0.192157, 0.317647, 1)

[node name="ParentMarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 688.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 200

[node name="ContentVerticalContainer" type="VBoxContainer" parent="ParentMarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ParentMarginContainer/ContentVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_x07cu")
theme_override_font_sizes/font_size = 125
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsVerticalContainer" type="VBoxContainer" parent="ParentMarginContainer/ContentVerticalContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MusicVolumeLabel" type="Label" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x07cu")
theme_override_font_sizes/font_size = 30
text = "Music Volume (0.3)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.3

[node name="SoundVolumeLabel" type="Label" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x07cu")
theme_override_font_sizes/font_size = 30
text = "Sound Volume (0.7)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundVolumeSlider" type="HSlider" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.7

[node name="FrequencyLabel" type="Label" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x07cu")
theme_override_font_sizes/font_size = 30
text = "Frequency (800)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrequencySlider" type="HSlider" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
min_value = 80.0
max_value = 3000.0
step = 10.0
value = 780.0

[node name="WPMLabel" type="Label" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x07cu")
theme_override_font_sizes/font_size = 30
text = "WPM (12)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WPMSlider" type="HSlider" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
min_value = 8.0
max_value = 30.0
value = 12.0

[node name="MuteWhenUnfocusedCheckbox" type="CheckBox" parent="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("2_x07cu")
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Mute when Unfocused"
alignment = 1
icon_alignment = 1
expand_icon = true

[connection signal="value_changed" from="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="value_changed" from="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer/FrequencySlider" to="." method="_on_frequency_slider_value_changed"]
[connection signal="value_changed" from="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer/WPMSlider" to="." method="_on_wpm_slider_value_changed"]
[connection signal="toggled" from="ParentMarginContainer/ContentVerticalContainer/SettingsVerticalContainer/MuteWhenUnfocusedCheckbox" to="." method="_on_check_box_toggled"]
